[package]
name = "flv"
version = "0.0.1"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "FLV reader and writer library in Rust."
documentation = "https://docs.rs/flv/0.0.1/flv/"
readme = "README.md"
keywords = ["flv", "reader", "writer", "tokio"]
categories = ["Multimedia", "Audio", "Video", "Asynchronous"]
repository = "https://github.com/gengteng/flv"

[dependencies]
thiserror = "1"
tokio = { version = "0.2", features = ["io-util"], optional = true }
lru = { version = "0.6", optional = true }

[[example]]
path = "examples/flv-dump.rs"
name = "flv-dump"

[[example]]
path = "examples/flv-seek.rs"
name = "flv-seek"

[[example]]
path = "examples/flv-slice.rs"
name = "flv-slice"

[features]
io-std = []
io-tokio = ["tokio"]
read-index = ["lru"]
full = ["io-std", "io-tokio", "read-index"]
