[package]
name = "flv"
version = "0.0.2"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "FLV reader and writer library in Rust."
documentation = "https://docs.rs/flv/0.0.2/flv/"
readme = "README.md"
keywords = ["flv", "reader", "writer", "tokio"]
categories = ["multimedia", "asynchronous", "filesystem"]
repository = "https://github.com/gengteng/flv"

[dependencies]
thiserror = "1"
tokio = { version = "0.2", features = ["io-util"], optional = true }
anyhow = { version = "1", optional = true }
structopt = { version = "0.3", optional = true}

[[example]]
path = "examples/flv-dump.rs"
name = "flv-dump"
required-features = ["io-std", "anyhow", "structopt"]

[[example]]
path = "examples/flv-seek.rs"
name = "flv-seek"
required-features = ["io-std", "anyhow"]

[[example]]
path = "examples/flv-slice.rs"
name = "flv-slice"

[[bin]]
path = "bin/main.rs"
name = "flv"

[features]
io-std = []
io-tokio = ["io-std", "tokio"]
full = ["io-std", "io-tokio"]
